--- a/index.html
+++ b/index.html
@@ -24,17 +24,24 @@
         <li>Toggle section buttons to include or exclude specific professors.</li>
         <li>Use filters and info as needed; finish by pressing <strong>Save</strong>.</li>
       </ul>
+      <p style="margin-top:1.2rem; color:var(--muted); font-size:.95rem;">Choose which experiment version to run:</p>
       <div class="actions">
-        <button id="beginBtn" class="primary">Begin Task ▸</button>
+        <button id="exp1Btn" class="primary">Experiment 1 ▸</button>
+        <button id="exp2Btn" class="primary">Experiment 2 ▸</button>
       </div>
     </div>
   </div>
   <script>
     const RUN_KEY = 'currentRunMetrics';
-    document.getElementById('beginBtn').addEventListener('click', ()=>{
+    document.getElementById('exp1Btn').addEventListener('click', ()=>{
       const fresh = { startedAt: Date.now(), nonInteractiveClicks:0, courseSelectorClicks:0, sectionSelectorClicks:0 };
       localStorage.setItem(RUN_KEY, JSON.stringify(fresh));
       window.location.href = 'experiment.html';
+    });
+    document.getElementById('exp2Btn').addEventListener('click', ()=>{
+      const fresh = { startedAt: Date.now(), nonInteractiveClicks:0, courseSelectorClicks:0, sectionSelectorClicks:0 };
+      localStorage.setItem(RUN_KEY, JSON.stringify(fresh));
+      window.location.href = 'experiment2.html';
     });
   </script>
 </body>
